<resources>
    <string name="app_name">Parking</string>
    <string name="near">附近</string>
    <string name="query">查询</string>
    <string name="message">消息</string>
    <string name="my">我的</string>
    <string name="near_park">附近停车场</string>
    <string name="line_park">线路</string>
    <string name="personal_center">个人中心</string>
    <string name="park_master">停车大师</string>
    <string name="park">停车</string>
    <string name="park_space">空余车位数： %s </string>
    <string name="park_price">价格： %s 元/小时</string>
    <string name="park_phone_number">电话：%s</string>
    <string name="park_address">地址：%s</string>
    <string name="know">知道了</string>
    <string name="the_last_page">最后一页到了！</string>
    <string name="account">账号：%s</string>
    <string name="my_order">订单</string>
    <string name="collect">收藏</string>
    <string name="wallet">钱包</string>
    <string name="about_us">关于我们</string>
    <string name="pay">支付</string>
    <string name="pay_success">已支付</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="safety_exit">安全退出</string>
    <string name="exit_program_hint">再按一次返回键退出</string>
    <string name="title_activity_login">Sign in</string>
    <string name="register_service">《注册条款和服务》</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_again_password">重复密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">两次输入密码不相等</string>
    <string name="error_invalid_password">这个密码太短了</string>
    <string name="error_incorrect_password">这个密码是不正确的</string>
    <string name="error_register">账号已存在</string>
    <string name="error_field_required">这个字段是必需的</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="et_digits">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ</string>
    <string name="register_success">注册成功！</string>
    <string name="login_success">登录成功！</string>
    <string name="to_login">请登录</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="reserve_number">预定车位数:</string>
    <string name="confirm_reserve">确认预定</string>
    <string name="reserve_success">预定成功，半小时之后开始计费。</string>
    <string name="hint_search">请输入要搜索的地址</string>
    <string name="tip_query_failed">查询失败</string>
    <string name="safety_exit_hint">确认退出登录？</string>
    <string name="login_hint">您还未登录，请前往登录？</string>
    <string name="order_time">订单时间：</string>
    <string name="delete_order_hint">您要删除此订单吗？</string>
    <string name="delete_order_success">删除订单成功！</string>
    <string name="make_order">正在提交订单</string>


</resources>
