<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_content"
    tools:context="com.example.parking.main.MainActivity">

    <include
        android:id="@+id/layout_appbar"
        layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/frame_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/radio_group"
        android:layout_below="@+id/layout_appbar" />

    <View
        style="@style/view_line"
        android:layout_below="@+id/frame_content" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/rb_padding"
        android:paddingTop="@dimen/rb_padding">

        <RadioButton
            android:id="@+id/rb_near"
            style="@style/main_rb"
            android:drawableTop="@drawable/rb_near_icon"
            android:text="@string/near" />

        <RadioButton
            android:id="@+id/rb_query"
            style="@style/main_rb"
            android:drawableTop="@drawable/rb_query_icon"
            android:text="@string/query" />

        <RadioButton
            android:id="@+id/rb_add"
            style="@style/main_rb"
            android:drawableTop="@drawable/rb_add_icon"
            android:text="@string/park" />

        <RadioButton
            android:id="@+id/rb_message"
            style="@style/main_rb"
            android:drawableTop="@drawable/rb_message_icon"
            android:text="@string/message" />

        <RadioButton
            android:id="@+id/rb_my"
            style="@style/main_rb"
            android:drawableTop="@drawable/rb_my_icon"
            android:text="@string/my" />
    </RadioGroup>
</RelativeLayout>
